# laulum.me

./: app.py  generate_static_site.py  pyproject.toml  readme.md  songs.json
templates/: edit.html  index.html  new_song.html  song.html
